<resources>
    <string name="app_name">Fooding</string>
    <string name="photo">Photo</string>
    <string name="cust_name">Name</string>
    <string name="cust_addr">Delivery address</string>
    <string name="cust_tel">Telephone number</string>
    <string name="cust_mail">E-mail</string>
    <string name="cust_card">Card number</string>
    <string name="cust_info">Extra Information</string>
    <string name="save_btn">Save</string>
    <string name="profile_btn">PROFILE</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="password">Password</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="signin_btn">SIGN IN</string>
    <string name="signout_btn">SIGN OUT</string>
    <string name="browse_btn">BROWSE RESTAURANTS</string>
    <string-array name="food_types">
        <item>Choose a restaurant type</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Mexican</item>
        <item>Japanese</item>
        <item>Burgers</item>
        <item>Indian</item>
    </string-array>
</resources>
